# ASTRODYN-CORE

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  secrets copy.ini  setup_env.py  sitemap.xml
advanced/: index.html
docs/: api-governance.md  architecture-hardening-plan.md  docstring-style.md  documentation-plan.md  extending-propagators.md  geqoe-cpp-architecture.md  geqoe-porting-plan.md  geqoe_taylor_plan.md  implementation-plan.md  maintainability-cleanup-roadmap.md  phase1-architecture.md  phaseb-module-decomposition-plan.md  phasec-api-governance.md  state-io-design.md
docs-site/: index.md
docs-site/advanced/: index.md
docs-site/getting-started/: examples.md  first-propagation.md  install.md  orekit-data.md
docs-site/how-to/: batch-tle-to-high-fidelity-ephemeris.md  export-trajectory-from-propagator.md  index.md  numerical-propagation-from-state.md  orbit-representation-roundtrip.md  tle-propagation-from-lines.md
docs-site/reference/: index.md
docs-site/troubleshooting/: common-setup-issues.md
docs-site/tutorials/: geqoe.md  index.md  propagation-quickstart.md  scenario-missions.md  uncertainty.md
docs/adaptive_geqoe/: error_control.md
docs/ai-config/: README.md
docs/archive/: architecture-hardening-plan.md
docs/geqoe_averaged/: LESSONS_LEARNED.md  README.md  extended_validation_results.json  extended_validation_table.tex  geqoe_averaged_j2_zonal_note.tex  geqoe_conjunction_filter_extension.tex  grid_comparison_results.json  j2_secular_vs_osculating.py  lara_comparison_results.json  next_step_plan.md  roundtrip_geqoe_results.json  short_period_direct_method.md  validation_check.py  validation_review.md  zonal_fourier_model.py  zonal_harmonic_probe.py  zonal_mean_validation.py  zonal_mean_validation.tex  zonal_short_period_validation.tex  zonal_symbolic_coeffs.py  zonal_symbolic_coeffs.tex  zonal_symbolic_general.py  zonal_symbolic_general.tex
docs/geqoe_taylor/: architecture.md  compass_continuous_markdown.md  deep-research-report-taylor-continuous-optim.md
docs/presentation/: Makefile  README.md  astrodyn_presentation.tex
examples/: README.md  _common.py  demo_covariance_propagation.py  demo_detector_mission.py  demo_dsst_builder.py  demo_keplerian_builder.py  demo_mission_maneuver_profile.py  demo_orbit_plot.py  demo_propagation.py  demo_scenario_object_uses.py  demo_state_file_numerical.py  demo_state_file_workflow.py  demo_tle_propagation.py  geqoe_adaptive_benchmark.py  geqoe_adaptive_error_plot.py  geqoe_cpp_benchmark.py  geqoe_cpp_order1_parity.py  geqoe_legacy_vs_staged.py  geqoe_propagator.py  geqoe_taylor_demo.py  geqoe_taylor_shooting_demo.py  math_cpp_comparison.py  quickstart.py  scenario_missions.py  tle_batch_high_fidelity_ephemeris.py  uncertainty.py
examples/cookbook/: ephemeris_from_oem.py  force_model_sweep.py  multi_fidelity_comparison.py  orbit_comparison.py  sma_maintenance_analysis.py
examples/geqoe_compare/: README.md  native_vs_heyoka_j2.py
how-to/: index.html
reference/: index.html
search/: search_index.json
tests/: test_api_boundary_hygiene.py  test_assembly_shim_compat.py  test_client_facades.py  test_covariance_propagation.py  test_dsst_assembly.py  test_ephemeris.py  test_geqoe_adaptive.py  test_geqoe_averaged_j2_validation.py  test_geqoe_averaged_zonal_exact_validation.py  test_geqoe_averaged_zonal_fourier_structure.py  test_geqoe_averaged_zonal_short_period_general.py  test_geqoe_averaged_zonal_symbolic_coeffs.py  test_geqoe_averaged_zonal_symbolic_general.py  test_geqoe_cpp.py  test_geqoe_cpp_staged_order1.py  test_geqoe_cpp_staged_order2.py  test_geqoe_cpp_staged_order3.py  test_geqoe_cpp_staged_order4.py  test_geqoe_error.py  test_geqoe_provider.py  test_geqoe_refactor.py  test_geqoe_taylor.py  test_geqoe_taylor_general.py  test_geqoe_taylor_shooting.py  test_geqoe_taylor_thrust.py  test_geqoe_taylor_zonal.py  test_lara_theory.py  test_math_utils.py  test_mission_detector_execution.py  test_mission_maneuvers.py  test_registry_factory.py  test_spacecraft_config.py  test_specs.py  test_state_io.py  test_state_orekit.py  test_state_series_ephemeris.py  test_tle_resolution.py  test_trajectory_export_wrapper.py  test_universe_config.py  test_universe_shim_compat.py
tutorials/: index.html
(+407 files in other folders)
