[build-system]
requires = ["scikit-build-core>=0.8.0", "pybind11>=2.11.0"]
build-backend = "scikit_build_core.build"

[project]
name = "astrodyn-core"
version = "1.0.0"
description = "Builder-first astrodynamics propagation core with Orekit-native semantics."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "ASTRODYN Team" }
]
dependencies = ["orekit>=13.1", "pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/jmontillag/ASTRODYN-CORE"
Repository = "https://github.com/jmontillag/ASTRODYN-CORE"
Documentation = "https://jmontillag.github.io/ASTRODYN-CORE/"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8.0", "mypy>=1.12"]
docs = [
  "mkdocs>=1.6,<2",
  "mkdocs-material>=9.5,<10",
  "mkdocstrings[python]>=0.26",
  "mkdocs-gen-files>=0.5",
  "mkdocs-literate-nav>=0.6",
  "pymdown-extensions>=10.0",
]
tle = ["spacetrack>=1.4"]

[tool.scikit-build]
wheel.packages = ["src/astrodyn_core"]
cmake.build-type = "Release"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
